# codeborn

./: .development.config.toml  .development.config.yml  .development.env  .development.secrets.yml  .gitignore  .production.config.toml  .production.config.yml  .production.env  .production.secrets.yml  Dockerfile.client  README.md  config.toml  docker-compose.yaml  pyproject.toml
codeborn/: config.py  database.py  logger.py  model.py
codeborn/api/: __main__.py  auth.py  deps.py  repos.py
codeborn/api/endpoints/: auth.py  bots.py  healthcheck.py  home.py  repos.py
codeborn/client/: Dockerfile  bot.py  messages.py  pyproject.toml
codeborn/engine/: __main__.py  lifecycle.py
codeborn/engine/agents/: __init__.py  container.py  process.py  registry.py
codeborn/engine/commands/: __init__.py  army.py
codeborn/generators/: army.py  map.py  map_generator.py
codeborn_api/: pyproject.toml
codeborn_api/codeborn_api/: __main__.py  auth.py  deps.py  repos.py
codeborn_api/codeborn_api/endpoints/: auth.py  bots.py  repos.py
codeborn_client/: Dockerfile  pyproject.toml
codeborn_client/codeborn_client/: bot.py
codeborn_engine/: pyproject.toml
codeborn_engine/codeborn_engine/: __main__.py  lifecycle.py
codeborn_engine/codeborn_engine/agents/: __init__.py  container.py  process.py  registry.py
codeborn_engine/codeborn_engine/commands/: __init__.py  army.py
codeborn_frontend/: package.json  vite.config.ts
codeborn_frontend/src/: router.tsx
codeborn_frontend/src/api/: client.ts
codeborn_frontend/src/components/layout/: LogoutButton.tsx  NavLink.tsx  TopNav.tsx
codeborn_frontend/src/lib/: utils.ts
codeborn_frontend/src/pages/: ArmyPage.tsx  DashboardPage.tsx  EconomyPage.tsx
codeborn_shared/: pyproject.toml
codeborn_shared/codeborn_shared/: config.py  database.py  logger.py  model.py
codeborn_shared/codeborn_shared/generators/: map_generator.py  user_generator.py
frontend/: .env.production  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: config.ts  main.tsx  router.tsx  types.tsx
frontend/src/api/: client.ts
frontend/src/components/icons/: GithubIcon.tsx
frontend/src/components/layout/: AppLayout.tsx  LogoutButton.tsx  TopNav.tsx
frontend/src/pages/: ErrorPage.tsx  LandingPage.tsx  LegalPage.tsx  ReposPage.tsx
frontend/src/pages/BotsPage/: BotCard.tsx  BotLog.tsx  BotMemory.tsx  BotsPage.tsx  CreateBotForm.tsx
frontend/src/pages/MapPage/: MapPage.tsx  MapSidebar.tsx  MapViewport.tsx  types.ts
frontend/src/pages/SettingsPage/: RemoveAccountForm.tsx  SettingsPage.tsx
infra/: ansible.cfg  api_service.yml  app_config.yml  bootstrap.yml  code.yml  database.yml  deploy.yml  environment.yml  frontend.yml  inventory.ini  nginx.yml  secrets.yml  setup.yml  site_api.yml  site_frontend.yml
infra/group_vars/: all.yml
infra/tasks/: build_client_docker_image.yml  build_frontend.yml  ensure_env.yml  issue_cert.yml  pull_repo.yml  restart_api.yml
infra/tasks/cert/: cron_renew.yml  issue.yml
infra/tasks/db/: migrate.yml
infra/tasks/docker/: build_image.yml  enable.yml
infra/tasks/git/: pull_repo.yml
infra/tasks/nginx/: enable_site.yml
infra/tasks/python_deps/: install.yml  uv_bin.yml  venv.yml
infra/tasks/secrets/: vault_password.yml
infra/templates/: nginx_site.j2
migrations/models/: 0_20251015012442_init.py  0_20251102153133_init.py  1_20251015183800_Terrain.py  1_20251102204151_Add swamp type.py  2_20251015213035_Message.respomnse_to.py
