[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeborn_client/codeborn_client"]

[project]
name = "codeborn-client"
version = "0.1.0"
description = "Codeborn Client"
requires-python = ">=3.13"

dependencies = [
    "msgspec>=0.19.0",
]

[project.optional-dependencies]
user = [
    # Dependencies to support user code
    "more-itertools>=10.8.0",
]
