[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeborn_engine/codeborn_engine"]

[project]
name = "codeborn-engine"
version = "0.1.0"
description = "Codeborn engine"
requires-python = ">=3.12"

dependencies = [
    "codeborn-client @ file:///${PROJECT_ROOT}/src/codeborn_client",
    "codeborn-shared @ file:///${PROJECT_ROOT}/src/codeborn_shared",
    "msgspec>=0.19.0",
    "alembic>=1.16.5",
    "databases[postgresql]>=0.9.0",
    "sqlalchemy>=2.0.43",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
]
