[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeborn_shared/codeborn_shared"]

[project]
name = "codeborn-shared"
version = "0.1.0"
description = "Codeborn Shared"
requires-python = ">=3.13"

dependencies = [
    "codeborn-client @ file:///${PROJECT_ROOT}/src/codeborn_client",
    "msgspec>=0.19.0",
    "pygithub>=2.8.1",
    "configobj>=5.0.9",
    "gitpython>=3.1.45",
]

[project.optional-dependencies]
infra = [
    "ansible>=12.0.0"
]
