[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeborn.client"]   # matches the folder structure

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "codeborn-client"
version = "0.1.0"
description = "Codeborn Client"
requires-python = ">=3.13"

dependencies = [
    "msgspec>=0.19.0",
]

[project.optional-dependencies]
user = [
    "more-itertools>=10.8.0"
]
